--- a/adapter-config.html
+++ b/adapter-config.html
@@ -625,7 +625,7 @@
 
                       <div class="col text-right mt-3">
                         <div class="add-edit-connection-bottom-btn">
-                          <button type="button" class="theme-button-small graydient-primary-btn">
+                          <button type="button" class="theme-btn graydient-primary-btn">
                             Save Configuration
                           </button>
                         </div>
@@ -813,7 +813,7 @@
 
                       <div class="col text-right mt-3">
                         <div class="add-edit-connection-bottom-btn">
-                          <button type="button" class="theme-button-small graydient-primary-btn">
+                          <button type="button" class="theme-btn graydient-primary-btn">
                             Save Configuration
                           </button>
                         </div>
