--- a/backend/advance-config.html
+++ b/backend/advance-config.html
@@ -1148,10 +1148,10 @@
                                         <button type="button" class="cancel-btn">
                                             Cancel
                                         </button>
-                                        <button type="button" class="theme-button-small graydient-secondary-btn">
+                                        <button type="button" class="theme-btn graydient-secondary-btn">
                                             Secondary Button
                                         </button>
-                                        <button type="button" class="theme-button-small graydient-primary-btn">
+                                        <button type="button" class="theme-btngraydient-primary-btn">
                                             Save Configuration
                                         </button>
                                     </div>
