--- a/policy-center-1.html
+++ b/policy-center-1.html
@@ -1129,7 +1129,7 @@
                                 placeholder="Add a comment"></textarea>
 
 
-                              <button type="button" class="theme-button-small graydient-primary-btn">Comment</button>
+                              <button type="button" class="theme-btn graydient-primary-btn">Comment</button>
                             </div>
 
 
