--- a/system-settings.html
+++ b/system-settings.html
@@ -563,7 +563,7 @@
 
                                       <div class="col text-right mt-3">
                                         <div class="">
-                                          <button type="button" class="theme-button-small graydient-primary-btn">
+                                          <button type="button" class="theme-btn graydient-primary-btn">
                                             Save
                                           </button>
                                         </div>
@@ -621,7 +621,7 @@
 
                                       <div class="col text-right mt-3">
                                         <div class="">
-                                          <button type="button" class="theme-button-small graydient-primary-btn">
+                                          <button type="button" class="theme-btn graydient-primary-btn">
                                             Save
                                           </button>
                                         </div>
@@ -673,7 +673,7 @@
 
                                       <div class="col text-right mt-3">
                                         <div class="">
-                                          <button type="button" class="theme-button-small graydient-primary-btn">
+                                          <button type="button" class="theme-btn graydient-primary-btn">
                                             Save
                                           </button>
                                         </div>
@@ -722,7 +722,7 @@
 
                                       <div class="col text-right mt-3">
                                         <div class="">
-                                          <button type="button" class="theme-button-small graydient-primary-btn">
+                                          <button type="button" class="theme-btn graydient-primary-btn">
                                             Save
                                           </button>
                                         </div>
@@ -773,7 +773,7 @@
 
 
                                     <div class="edit-column-export">
-                                      <button type="button" class="theme-button-small graydient-primary-btn">
+                                      <button type="button" class="theme-btn graydient-primary-btn">
                                         Add User
                                       </button>
                                     </div>
@@ -1084,7 +1084,7 @@
 
 
                                     <div class="edit-column-export">
-                                      <button type="button" class="theme-button-small graydient-primary-btn">
+                                      <button type="button" class="theme-btn graydient-primary-btn">
                                         Add Role
                                       </button>
                                     </div>
