--- a/policy-center-1.html
+++ b/policy-center-1.html
@@ -1337,7 +1337,7 @@
 
                                   </div>
 
-                                  <button type="button" class="theme-button-small graydient-primary-btn">Add</button>
+                                  <button type="button" class="theme-btn graydient-primary-btn">Add</button>
 
                                 </div>
                               </div>
