--- a/policy-center-3.html
+++ b/policy-center-3.html
@@ -1185,7 +1185,7 @@
                                                                 placeholder="Add a comment"></textarea>
 
                                                             <button type="button"
-                                                                class="theme-button-small graydient-primary-btn">
+                                                                class="theme-btn graydient-primary-btn">
                                                                 Comment
                                                             </button>
                                                         </div>
