--- a/policy-center-tasks.html
+++ b/policy-center-tasks.html
@@ -375,7 +375,7 @@
                                         </form>
 
                                         <div>
-                                            <button type="button" class="theme-button-small graydient-primary-btn">
+                                            <button type="button" class="theme-btn theme-btn-big graydient-primary-btn">
                                                 Search
                                             </button>
                                         </div>
