--- a/save-queries.html
+++ b/save-queries.html
@@ -374,7 +374,7 @@
                                         </form>
 
                                         <div>
-                                            <button type="button" class="theme-button-small graydient-primary-btn">
+                                            <button type="button" class="theme-btn graydient-primary-btn">
                                                 Search
                                             </button>
                                         </div>
