--- a/policy-center.html
+++ b/policy-center.html
@@ -426,7 +426,7 @@
                                         </div> -->
 
                                         <div>
-                                            <button type="button" class="theme-btn-big graydient-primary-btn">
+                                            <button type="button" class="theme-btn-big theme-btn graydient-primary-btn">
                                                 Search
                                             </button>
                                         </div>
