--- a/backend/advance-config.html
+++ b/backend/advance-config.html
@@ -1151,7 +1151,7 @@
                                         <button type="button" class="theme-btn graydient-secondary-btn">
                                             Secondary Button
                                         </button>
-                                        <button type="button" class="theme-btngraydient-primary-btn">
+                                        <button type="button" class="theme-btngraydient-primary-btn theme-btn">
                                             Save Configuration
                                         </button>
                                     </div>
