--- a/backend/index.html
+++ b/backend/index.html
@@ -257,9 +257,9 @@
                     </tr>
                     <tr>
                       <td>Advance Configuration</td>
-                      <td><a href="advance-config.html">Html</a></td>
+                      <td><a href="advance-config.html" target="_blank">Html</a></td>
 
-                      <td><a href="https://invis.io/X3WVS9PHC8G#/424724837_Connectors_-_Connector_Settings"
+                      <td><a href="https://invis.io/X3WVS9PHC8G#/426544798_Advance_Configuration_July-13-20"
                           target="_blank">Design</a>
                       </td>
                     </tr>
