--- a/login.html
+++ b/login.html
@@ -64,9 +64,10 @@
             <div class="fieldsSection">
               <form action="manage-app-users.html" id="LoginForm">
                 <!-- <h3>Login</h3>-->
-                <label>User Name</label>
-                <input type="text" class="userName" placeholder="">
-
+                <div class="login-username-div">
+                  <label>User Name</label>
+                  <input type="text" class="userName" placeholder="">
+                </div>
 
                 <div class="login-pass-div">
                   <label>Password</label>
