shariq pc changes

--- a/backend/device-listings.html
+++ b/backend/device-listings.html
@@ -490,7 +490,7 @@
 
 
                       <div class="wrapper">
-                        <table>
+                        <table class="listing-table">
                           <tbody>
                             <tr>
                               <th>
@@ -512,7 +512,8 @@
 
                             <tr class="parent-row">
 
-                              <td class="border-top-left"><label class="check-container"><input type="checkbox"><span class="checkmark"></span></label></td>
+                              <td class="border-top-left"><label class="check-container"><input type="checkbox"><span
+                                    class="checkmark"></span></label></td>
 
                               <td>
 
@@ -766,7 +767,8 @@
 
                             <tr class="parent-row">
 
-                              <td class="border-top-left border-bottom-left"><label class="check-container"><input type="checkbox"><span class="checkmark"></span></label></td>
+                              <td class="border-top-left border-bottom-left"><label class="check-container"><input
+                                    type="checkbox"><span class="checkmark"></span></label></td>
 
                               <td>
 
@@ -928,7 +930,8 @@
 
                             <tr class="parent-row">
 
-                              <td class="border-top-left border-bottom-left"><label class="check-container"><input type="checkbox"><span class="checkmark"></span></label></td>
+                              <td class="border-top-left border-bottom-left"><label class="check-container"><input
+                                    type="checkbox"><span class="checkmark"></span></label></td>
 
                               <td>
 
@@ -1193,7 +1196,7 @@
     <br>
     <br>
 
-   
+
 
 
 
