--- a/backend/policy-center-2.html
+++ b/backend/policy-center-2.html
@@ -1346,7 +1346,7 @@
 
                                                             <div class="add-tags-container">
                                                                 <div class="add-tags-left-col">
-                                                                    <table class="table table-borderless">
+                                                                    <table class="table table-borderless listing-table">
                                                                         <thead>
                                                                             <tr>
                                                                                 <th>Tag Name</th>
