--- a/notification-lists.html
+++ b/notification-lists.html
@@ -448,7 +448,7 @@
 
 
                                             <div class="wrapper notification-lists-wrapper">
-                                                <table>
+                                                <table class="listing-table">
                                                     <tbody>
                                                         <tr>
                                                             <th>
