--- a/backend/adapter-config.html
+++ b/backend/adapter-config.html
@@ -332,7 +332,7 @@
                     <div class="grid-table-flow">
                       <div class="table-full-scroll">
                         <div class="wrapper">
-                          <table>
+                          <table class="listing-table">
                             <tbody>
                               <tr>
                                 <th>
