--- a/backend/device-detail - Executed Actions.html
+++ b/backend/device-detail - Executed Actions.html
@@ -1163,7 +1163,7 @@
                                   </div>
 
                                   <div class="table-wrap table-wrap-margin">
-                                    <table class="table table-extra-padding table-fonts">
+                                    <table class="table table-extra-padding table-fonts listing-table">
                                       <thead>
                                         <tr>
                                           <th scope="col">Name
