--- a/backend/device-detail.html
+++ b/backend/device-detail.html
@@ -1372,7 +1372,7 @@
                                   </div>
 
                                   <div class="table-wrap table-wrap-margin">
-                                    <table class="table table-extra-padding table-fonts">
+                                    <table class="table table-extra-padding table-fonts listing-table">
                                       <thead>
                                         <tr>
                                           <th scope="col">Policy Routine
