--- a/backend/index.html
+++ b/backend/index.html
@@ -267,7 +267,7 @@
                   </tbody>
                 </table>
 
-                <table class="table table-borderless table-width">
+                <table class="table table-borderless table-width listing-table">
                   <thead>
                     <tr>
                       <th scope="col">Users</th>
