--- a/backend/policy-center-tasks.html
+++ b/backend/policy-center-tasks.html
@@ -407,7 +407,7 @@
                                         <div class="grid-table-flow">
                                             <div class="table-full-scroll">
                                                 <div class="wrapper">
-                                                    <table>
+                                                    <table class="listing-table">
                                                         <tbody>
                                                             <tr>
                                                                 <th>
