--- a/index.html
+++ b/index.html
@@ -260,6 +260,14 @@
                       <td><a href="https://invis.io/X3WVS9PHC8G#/413712410_Add-Connections" target="_blank">Design</a>
                       </td>
                     </tr>
+                    <tr>
+                      <td>Advance Configuration</td>
+                      <td><a href="advance-config.html" target="_blank">Html</a></td>
+
+                      <td><a href="https://invis.io/X3WVS9PHC8G#/426544798_Advance_Configuration_July-13-20"
+                          target="_blank">Design</a>
+                      </td>
+                    </tr>5hhj\\sas
 
                   </tbody>
                 </table>
