--- a/policy-center-1.html
+++ b/policy-center-1.html
@@ -1159,7 +1159,7 @@
 
                               <div class="add-tags-container">
                                 <div class="add-tags-left-col">
-                                  <table class="table table-borderless">
+                                  <table class="table table-borderless listing-table">
                                     <thead>
                                       <tr>
                                         <th>Tag Name</th>
