--- a/policy-center-3.html
+++ b/policy-center-3.html
@@ -1203,7 +1203,7 @@
                                                         <div class="white-bg border-theme inner-tab-content-right-col">
                                                             <div class="add-tags-container">
                                                                 <div class="add-tags-left-col">
-                                                                    <table class="table table-borderless">
+                                                                    <table class="table table-borderless listing-table">
                                                                         <thead>
                                                                             <tr>
                                                                                 <th>Tag Name</th>
