backend build updated

--- a/backend/device-detail-old.html
+++ b/backend/device-detail-old.html
@@ -414,8 +414,6 @@
                         role="tab" aria-controls="nav-contact" aria-selected="false">Comments</a>
                       <a class="nav-item nav-link" id="nav-tags-tab" data-toggle="tab" href="#nav-tags" role="tab"
                         aria-controls="nav-contact" aria-selected="false">Tags</a>
-                      <a class="nav-item nav-link" id="nav-tags-tab" data-toggle="tab" href="#nav-ExecutedActions"
-                        role="tab" aria-controls="nav-contact" aria-selected="false">Executed Actions</a>
                     </div>
                   </nav>
                   <div class="tab-content" id="nav-tabContent">
@@ -622,7 +620,7 @@
                                     <div class="devices-tab-right-btn-col">
                                       <button type="button" data-toggle="modal"
                                         data-target="#query-wizard-expression-modal"
-                                        class="theme-btn graydient-primary-btn">View Advanced</button>
+                                        class="theme-button-small graydient-primary-btn">View Advanced</button>
                                     </div>
                                   </div>
 
@@ -833,8 +831,6 @@
                       </div>
 
                     </div>
-
-
                     <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
 
                       <div class="inner-tab-content">
@@ -1163,7 +1159,7 @@
                                   </div>
 
                                   <div class="table-wrap table-wrap-margin">
-                                    <table class="table table-extra-padding table-fonts listing-table">
+                                    <table class="table table-extra-padding table-fonts">
                                       <thead>
                                         <tr>
                                           <th scope="col">Name
@@ -1319,183 +1315,6 @@
 
 
                     </div>
-
-                    <!-- STARTS -- Device Detail-Executed Actions -->
-
-
-
-
-
-
-
-                    <div class="tab-pane fade" id="nav-ExecutedActions" role="tabpanel"
-                      aria-labelledby="nav-profile-tab">
-
-                      <div class="inner-tab-content">
-
-                        <div class="row m-0">
-
-                          <div class="col-lg-12 tab-right-column-container">
-
-                            <div class="white-bg  border-theme inner-tab-content-right-col">
-                              <div class="tab-content" id="v-pills-tabContent">
-                                <div class="tab-pane fade active show" id="v-pills-home" role="tabpanel"
-                                  aria-labelledby="v-pills-home-tab">
-
-
-                                  <div class="search-wrap-standard search-inverse mb-4">
-                                    <input type="text" placeholder="Search Executed Actions" class="search-field">
-
-                                    <a href="#" class="search-query-dropdown-btn">
-                                      <img src="images/down-arrow.svg">
-                                    </a>
-
-                                  </div>
-
-
-                                  <div class="device-result-export-row device-result-export-row-standard">
-                                    <div class="device-results">
-                                      Actions List (1)
-                                      <!-- <a href="#">                            
-                                           <img src="images/vertical-dots.svg">
-                                          </a> -->
-                                    </div>
-
-
-                                    <div class="edit-column-export">
-                                      <!-- <a href="#">Edit Column</a>
-                                          <span class="split-pipe">|</span> -->
-                                      <a href="#">Export CSV</a>
-                                    </div>
-
-
-                                  </div>
-
-                                  <div class="table-wrap table-wrap-margin">
-                                    <table class="table table-extra-padding table-fonts">
-                                      <thead>
-                                        <tr>
-                                          <th scope="col">Policy Routine
-                                            <img src="images/table-down-arrow.svg" class="table-down-arrow">
-                                          </th>
-                                          <th scope="col"> Action Class</th>
-                                          <th scope="col">Action</th>
-                                          <th scope="col">Execution Result</th>
-                                          <th scope="col">Tirggered Mechanism</th>
-                                          <th scope="col">Execution Time</th>
-
-                                        </tr>
-                                      </thead>
-                                      <tbody>
-                                        <tr>
-                                          <td><a href="#">Tag - Test - Task 1</a></td>
-                                          <td>Main/Pass/Fail/Post</td>
-                                          <td>Add Tag</td>
-                                          <td>Success/failure</td>
-                                          <td>Manual/Action/Scheduled</td>
-                                          <td>1:22pm 11/22/2020</td>
-
-                                        </tr>
-
-                                      </tbody>
-                                    </table>
-
-
-
-
-                                  </div>
-
-
-
-
-
-
-
-
-
-                                </div>
-
-
-                                <div class="tab-pane fade" id="v-pills-profile" role="tabpanel"
-                                  aria-labelledby="v-pills-profile-tab">
-
-                                  <div class="row">
-                                    <div class="col-lg-6 mt-2"> Left Section</div>
-                                    <div class="col-lg-6 mt-2"> Right Section</div>
-
-                                  </div>
-
-                                </div>
-                                <div class="tab-pane fade" id="v-pills-messages" role="tabpanel"
-                                  aria-labelledby="v-pills-messages-tab">
-
-                                  <div class="row">
-                                    <div class="col-lg-6 mt-2"> Left Section</div>
-                                    <div class="col-lg-6 mt-2"> Right Section</div>
-
-                                  </div>
-
-                                </div>
-                                <div class="tab-pane fade" id="v-pills-settings" role="tabpanel"
-                                  aria-labelledby="v-pills-settings-tab">
-
-                                  <div class="row">
-                                    <div class="col-lg-6 mt-2"> Left Section</div>
-                                    <div class="col-lg-6 mt-2"> Right Section</div>
-
-                                  </div>
-
-                                </div>
-                              </div>
-                            </div>
-
-
-                            <!-- Hide Starts -- Pagination
-
-
-                            <div class="bottom-page">
-                              <ul class="pagination table-pagination">
-                                <li class="page-item"><a class="page-link" href="#">First</a></li>
-                                <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-                                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                                <li class="page-item"><a class="page-link" href="#">3</a></li>
-
-                                <li class="page-item"><a class="page-link" href="#">Next</a></li>
-                                <li class="page-item"><a class="page-link" href="#">Last</a></li>
-
-
-                              </ul>
-
-
-                              <div class="results-per-page">
-                                <span class="mr-4 result-pg">Results Per Page</span>
-                                <a href="#" class="result-number">20</a>
-
-                                <a href="#" class="acord-arrow result-dropdown">
-                                  <img src="images/down-arrow.svg">
-                                </a>
-
-
-
-                              </div>
-                               
-
-                            </div>
-
-                              Hide ends -- Pagination -->
-
-                          </div>
-                        </div>
-
-
-                      </div>
-
-
-                    </div>
-
-
-                    <!-- ENDS -- Device Detail-Executed Actions  -->
 
                     <div class="tab-pane fade" id="nav-comments" role="tabpanel" aria-labelledby="nav-contact-tab">
 
@@ -1686,7 +1505,7 @@
                                 placeholder="Add a comment"></textarea>
 
 
-                              <button type="button" class="theme-btn graydient-primary-btn">Comment</button>
+                              <button type="button" class="theme-button-small graydient-primary-btn">Comment</button>
                             </div>
 
 
@@ -1894,7 +1713,7 @@
 
                                   </div>
 
-                                  <button type="button" class="theme-btn graydient-primary-btn">Add</button>
+                                  <button type="button" class="theme-button-small graydient-primary-btn">Add</button>
 
                                 </div>
                               </div>
