--- a/backend/device-detail.html
+++ b/backend/device-detail.html
@@ -622,7 +622,7 @@
                                     <div class="devices-tab-right-btn-col">
                                       <button type="button" data-toggle="modal"
                                         data-target="#query-wizard-expression-modal"
-                                        class="theme-btn graydient-primary-btn">View Advanced</button>
+                                        class="theme-button-small graydient-primary-btn">View Advanced</button>
                                     </div>
                                   </div>
 
@@ -1372,7 +1372,7 @@
                                   </div>
 
                                   <div class="table-wrap table-wrap-margin">
-                                    <table class="table table-extra-padding table-fonts listing-table">
+                                    <table class="table table-extra-padding table-fonts">
                                       <thead>
                                         <tr>
                                           <th scope="col">Policy Routine
@@ -1704,7 +1704,7 @@
                                 placeholder="Add a comment"></textarea>
 
 
-                              <button type="button" class="theme-btn graydient-primary-btn">Comment</button>
+                              <button type="button" class="theme-button-small graydient-primary-btn">Comment</button>
                             </div>
 
 
