--- a/backend/sample-web.html
+++ b/backend/sample-web.html
@@ -31,9 +31,10 @@
 
     <style>
         .top-img {
-            margin: 0px auto;
+            /* margin: 0px auto; */
+            width: 100%;
             text-align: center;
-            background: url(images/Website-hero-v2.gif) no-repeat;
+            background: url(images/Website-hero-v2.gif) no-repeat center center;
             background-size: cover;
             min-height: 897px;
             height: 100vh;
@@ -43,7 +44,7 @@
             margin: 0px auto;
             text-align: center;
             background: url(images/Website--vInventa--bottom.png) no-repeat;
-            background-size: cover;
+            background-size: 100%;
             min-height: 7900px;
             height: 100vh;
         }
@@ -67,6 +68,7 @@
                         <!-- <img src="images/Website-hero-v2.gif" /> -->
                     </div>
                     <div class="bottom-img">
+
                         <!-- <img src="images/Website--vInventa--bottom.png" /> -->
                     </div>
 
