--- a/backend/all-links.html
+++ b/backend/all-links.html
@@ -78,10 +78,16 @@
                     <p>
                       <a href="adapter-config.html" target="_blank">Adapter Config
                       </a>
-                    </p>
-                    <br />
-                    <br />
-                    <br />
+                      <br />
+                      <br />
+                      <br />
+                      <p>
+                        <a href="advance-config.html" target="_blank">Advance Config
+                        </a>
+                      </p>
+                      <br />
+                      <br />
+                      <br />
 
                   </div>
                 </div>
