--- a/backend/connectors.html
+++ b/backend/connectors.html
@@ -460,7 +460,7 @@
 
 
                       <div class="wrapper connectors-wrapper">
-                        <table class="listing-table">
+                        <table>
                           <tbody>
                             <tr>
                               <th>
