--- a/backend/device-listings.html
+++ b/backend/device-listings.html
@@ -490,7 +490,7 @@
 
 
                       <div class="wrapper">
-                        <table class="listing-table">
+                        <table>
                           <tbody>
                             <tr>
                               <th>
@@ -510,10 +510,9 @@
                               </th>
                             </tr>
 
-                            <tr class="parent-row">
+                            <!--<tr class="parent-row">
 
-                              <td class="border-top-left"><label class="check-container"><input type="checkbox"><span
-                                    class="checkmark"></span></label></td>
+                              <td class="border-top-left"><input type="checkbox"></td>
 
                               <td>
 
@@ -686,7 +685,7 @@
 
                             </tr>
 
-                            <tr class="child-row child-row-no-td-border">
+                             <tr class="child-row child-row-no-td-border">
 
                               <td class="white-spacer">
 
@@ -737,7 +736,7 @@
                             </tr>
 
 
-                            <tr class="empty-row-white">
+                             <tr class="empty-row-white">
                               <td class="border-bottom-left">
 
                               </td>
@@ -750,7 +749,7 @@
                               </td>
                             </tr>
 
-                            <tr class="empty-row">
+                           <tr class="empty-row">
 
                               <td colspan="6" class="border-bottom-left border-bottom-right">
 
@@ -762,13 +761,12 @@
 
 
 
-                            </tr>
+                            </tr> -->
 
 
                             <tr class="parent-row">
 
-                              <td class="border-top-left border-bottom-left"><label class="check-container"><input
-                                    type="checkbox"><span class="checkmark"></span></label></td>
+                              <td class="border-top-left border-bottom-left"><input type="checkbox"></td>
 
                               <td>
 
@@ -913,7 +911,7 @@
                             </tr>
 
 
-                            <tr class="empty-row">
+                            <!-- <tr class="empty-row">
 
                               <td colspan="6" class="border-bottom-left border-bottom-right">
 
@@ -925,13 +923,322 @@
 
 
 
-                            </tr>
+                            </tr> -->
 
 
                             <tr class="parent-row">
 
-                              <td class="border-top-left border-bottom-left"><label class="check-container"><input
-                                    type="checkbox"><span class="checkmark"></span></label></td>
+                              <td class="border-top-left border-bottom-left"><input type="checkbox"></td>
+
+                              <td>
+
+                                <div class="table-innerbox">
+
+
+                                  <div class="table-logos">
+                                    <a href="#"><img src="images/deep_security_logo.png"></a>
+                                    <a href="#"><img src="images/eset_logo.png"></a>
+                                    <a href="#"><img src="images/fortigate_logo.png"></a>
+                                    <a href="#"><img src="images/nexpose_logo.png"></a>
+                                  </div>
+
+                                </div>
+
+                              </td>
+
+
+
+                              <td>
+
+                                <div class="table-innerbox">
+
+
+                                  <span>
+                                    <div class="table-innerbox">
+
+
+                                      <span>
+                                        2019-10-20:11:25:45
+                                      </span>
+
+
+                                      <span class="pipe">
+                                        |
+                                      </span>
+
+                                      <span>
+                                        2019-05-16 21 08
+                                      </span>
+
+
+                                      <span class="plus-more-data">
+                                        <div class="more-numbers">
+                                          2
+                                        </div>
+                                        <div class="dots-row">
+                                          <span class="dots">.</span>
+                                          <span class="dots">.</span>
+                                          <span class="dots">.</span>
+                                        </div>
+
+                                      </span>
+
+                                    </div>
+
+                                  </span>
+
+
+                                </div>
+
+                              </td>
+
+
+
+
+
+                              <td>
+                                <div class="table-innerbox">
+
+
+                                  <span>
+                                    2019-10-20:11:25:45
+                                  </span>
+
+
+                                  <span class="pipe">
+                                    |
+                                  </span>
+
+                                  <span>
+                                    2019-05-16 21 08
+                                  </span>
+
+
+                                  <span class="plus-more-data">
+                                    <div class="more-numbers">
+                                      2
+                                    </div>
+                                    <div class="dots-row">
+                                      <span class="dots">.</span>
+                                      <span class="dots">.</span>
+                                      <span class="dots">.</span>
+                                    </div>
+
+                                  </span>
+
+                                </div>
+
+                              </td>
+
+                              <td>
+
+                                <div class="table-innerbox">
+
+
+                                  <span>
+                                    2019-10-20:11:25:45
+                                  </span>
+
+
+                                  <span class="pipe">
+                                    |
+                                  </span>
+
+                                  <span>
+                                    2019-05-16 21 08
+                                  </span>
+
+
+                                  <span class="plus-more-data">
+                                    <div class="more-numbers">
+                                      2
+                                    </div>
+                                    <div class="dots-row">
+                                      <span class="dots">.</span>
+                                      <span class="dots">.</span>
+                                      <span class="dots">.</span>
+                                    </div>
+
+                                  </span>
+
+                                </div>
+
+
+                              </td>
+
+
+
+
+
+                              <td class="border-top-right border-bottom-right">
+                                <a href="#" class="acord-arrow">
+                                  <img src="images/down-arrow.svg">
+                                </a>
+
+                              </td>
+
+
+
+
+                            </tr>
+                            <tr class="parent-row">
+
+                              <td class="border-top-left border-bottom-left"><input type="checkbox"></td>
+
+                              <td>
+
+                                <div class="table-innerbox">
+
+
+                                  <div class="table-logos">
+                                    <a href="#"><img src="images/deep_security_logo.png"></a>
+                                    <a href="#"><img src="images/eset_logo.png"></a>
+                                    <a href="#"><img src="images/fortigate_logo.png"></a>
+                                    <a href="#"><img src="images/nexpose_logo.png"></a>
+                                  </div>
+
+                                </div>
+
+                              </td>
+
+
+
+                              <td>
+
+                                <div class="table-innerbox">
+
+
+                                  <span>
+                                    <div class="table-innerbox">
+
+
+                                      <span>
+                                        2019-10-20:11:25:45
+                                      </span>
+
+
+                                      <span class="pipe">
+                                        |
+                                      </span>
+
+                                      <span>
+                                        2019-05-16 21 08
+                                      </span>
+
+
+                                      <span class="plus-more-data">
+                                        <div class="more-numbers">
+                                          2
+                                        </div>
+                                        <div class="dots-row">
+                                          <span class="dots">.</span>
+                                          <span class="dots">.</span>
+                                          <span class="dots">.</span>
+                                        </div>
+
+                                      </span>
+
+                                    </div>
+
+                                  </span>
+
+
+                                </div>
+
+                              </td>
+
+
+
+
+
+                              <td>
+                                <div class="table-innerbox">
+
+
+                                  <span>
+                                    2019-10-20:11:25:45
+                                  </span>
+
+
+                                  <span class="pipe">
+                                    |
+                                  </span>
+
+                                  <span>
+                                    2019-05-16 21 08
+                                  </span>
+
+
+                                  <span class="plus-more-data">
+                                    <div class="more-numbers">
+                                      2
+                                    </div>
+                                    <div class="dots-row">
+                                      <span class="dots">.</span>
+                                      <span class="dots">.</span>
+                                      <span class="dots">.</span>
+                                    </div>
+
+                                  </span>
+
+                                </div>
+
+                              </td>
+
+                              <td>
+
+                                <div class="table-innerbox">
+
+
+                                  <span>
+                                    2019-10-20:11:25:45
+                                  </span>
+
+
+                                  <span class="pipe">
+                                    |
+                                  </span>
+
+                                  <span>
+                                    2019-05-16 21 08
+                                  </span>
+
+
+                                  <span class="plus-more-data">
+                                    <div class="more-numbers">
+                                      2
+                                    </div>
+                                    <div class="dots-row">
+                                      <span class="dots">.</span>
+                                      <span class="dots">.</span>
+                                      <span class="dots">.</span>
+                                    </div>
+
+                                  </span>
+
+                                </div>
+
+
+                              </td>
+
+
+
+
+
+                              <td class="border-top-right border-bottom-right">
+                                <a href="#" class="acord-arrow">
+                                  <img src="images/down-arrow.svg">
+                                </a>
+
+                              </td>
+
+
+
+
+                            </tr>
+                            <tr class="parent-row">
+
+                              <td class="border-top-left border-bottom-left"><input type="checkbox"></td>
 
                               <td>
 
@@ -1087,7 +1394,7 @@
 
 
 
-                            <tr class="empty-row">
+                            <!-- <tr class="empty-row">
 
                               <td colspan="6" class="border-bottom-left border-bottom-right">
 
@@ -1099,7 +1406,7 @@
 
 
 
-                            </tr>
+                            </tr> -->
 
 
                             <!-- second row-->
@@ -1190,12 +1497,35 @@
 
 
 
-    <br>
+    <!-- <br>
     <br>
     <br>
     <br>
     <br>
 
+    <label class="onoffbtn btn-switch-box">
+
+      <span>
+        And
+      </span>
+
+      <input type="checkbox">
+
+
+    </label> -->
+
+
+
+    <!--and or btn-->
+    <!-- <label class="switch-btn">
+      <input type="checkbox" id="togBtn">
+      <div class="sliders round"> -->
+    <!--ADDED HTML -->
+    <!-- <span class="on">OR</span>
+        <span class="off">AND</span> -->
+    <!--END-->
+    <!-- </div>
+    </label> -->
 
 
 
