--- a/backend/index.html
+++ b/backend/index.html
@@ -88,15 +88,13 @@
                     </tr>
                     <tr>
                       <td>Notification Header</td>
-                      <td><a href="../notification-header.html" target="_blank">Html</a></td>
+                      <td><a href="notification-header.html" target="_blank">Html</a></td>
 
-                      <td><a
-                          href="https://projects.invisionapp.com/share/X3WVS9PHC8G#/screens/425227052_Notification-V2-2"
-                          target="_blank">Design</a></td>
+                      <td><a href="#" target="_blank">Design</a></td>
                     </tr>
                     <tr>
                       <td>Notification Lists</td>
-                      <td><a href="../notification-lists.html" target="_blank">Html</a></td>
+                      <td><a href="notification-lists.html" target="_blank">Html</a></td>
 
                       <td><a
                           href="https://projects.invisionapp.com/share/X3WVS9PHC8G#/screens/425530367_Notification-List"
@@ -104,7 +102,7 @@
                     </tr>
                     <tr>
                       <td>Notification Model</td>
-                      <td><a href="../notification-model.html" target="_blank">Html</a></td>
+                      <td><a href="notification-model.html" target="_blank">Html</a></td>
 
                       <td><a
                           href="https://projects.invisionapp.com/share/X3WVS9PHC8G#/screens/425530366_Notification-Detail"
@@ -255,6 +253,13 @@
                       <td><a href="https://invis.io/X3WVS9PHC8G#/413712410_Add-Connections" target="_blank">Design</a>
                       </td>
                     </tr>
+                    <!-- <tr>
+                      <td>Advance Connector</td>
+                      <td><a href="#" data-toggle="modal" data-target="#exampleModal">Html</a></td>
+
+                      <td><a href="https://invis.io/X3WVS9PHC8G#/413712410_Add-Connections" target="_blank">Design</a>
+                      </td>
+                    </tr> -->
                     <tr>
                       <td>Advance Configuration</td>
                       <td><a href="advance-config.html" target="_blank">Html</a></td>
@@ -267,7 +272,7 @@
                   </tbody>
                 </table>
 
-                <table class="table table-borderless table-width listing-table">
+                <table class="table table-borderless table-width">
                   <thead>
                     <tr>
                       <th scope="col">Users</th>
