--- a/backend/policy-center-1.html
+++ b/backend/policy-center-1.html
@@ -1129,7 +1129,7 @@
                                 placeholder="Add a comment"></textarea>
 
 
-                              <button type="button" class="theme-button-small graydient-primary-btn">Comment</button>
+                              <button type="button" class="theme-btn graydient-primary-btn">Comment</button>
                             </div>
 
 
@@ -1337,7 +1337,7 @@
 
                                   </div>
 
-                                  <button type="button" class="theme-button-small graydient-primary-btn">Add</button>
+                                  <button type="button" class="theme-btn graydient-primary-btn">Add</button>
 
                                 </div>
                               </div>
