--- a/backend/policy-center-2.html
+++ b/backend/policy-center-2.html
@@ -1315,7 +1315,7 @@
 
 
                                                             <button type="button"
-                                                                class="theme-button-small graydient-primary-btn">Comment</button>
+                                                                class="theme-btn graydient-primary-btn">Comment</button>
                                                         </div>
 
 
