--- a/backend/system-settings.html
+++ b/backend/system-settings.html
@@ -561,7 +561,7 @@
                                         </div>
                                       </div>
 
-                                      <div class="col text-right mt-3">
+                                      <div class="col text-right mt-3 mb-3">
                                         <div class="">
                                           <button type="button" class="theme-btn graydient-primary-btn">
                                             Save
