--- a/index.html
+++ b/index.html
@@ -293,6 +293,28 @@
                   </tbody>
                 </table>
 
+                <table class="table table-borderless table-width">
+                  <thead>
+                    <tr>
+                      <th scope="col">Admin</th>
+                      <th scope="col"></th>
+                      <th scope="col"></th>
+
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>System Settings ( All Tabs)</td>
+                      <td><a href="system-settings.html" target="_blank">Html</a></td>
+
+                      <td><a href="https://invis.io/X3WVS9PHC8G#/426412622_Email-Settings" target="_blank">Design</a>
+                      </td>
+                    </tr>
+
+
+                  </tbody>
+                </table>
+
 
 
 
