--- a/backend/system-settings.html
+++ b/backend/system-settings.html
@@ -513,7 +513,8 @@
                                             <div class="checkbox-with-text-row">
                                               <div><input type="checkbox" /></div>
                                               <div class="label-div">
-                                                Run as a real-time adapter
+
+                                                Send Email
                                               </div>
 
                                             </div>
@@ -554,7 +555,7 @@
                                               <input type="checkbox" />
                                             </div>
                                             <div class="label-div">
-                                              Send Email
+                                              Use SSL For Connection (optinal)
                                             </div>
 
                                           </div>
