--- a/adapter-config.html
+++ b/adapter-config.html
@@ -6,7 +6,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" /> b
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
   <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet" />
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
@@ -316,7 +316,7 @@
                 </div>
 
                 <div class="add-edit-connection-heading-row">
-                  <div class="add-edit-heading">Add or Edit connection</div>
+                  <div class="add-edit-heading"> <strong>Add or Edit connection</strong> </div>
                   <div class="add-edit-connection-btns">
                     <a href="#">Advanced Settings</a>
                     <div>
@@ -617,13 +617,13 @@
                             </div>
                           </div>
 
-                          <div class="col text-right mt-3">
+                          <!-- <div class="col text-right mt-3">
                             <div class="add-edit-connection-bottom-btn">
                               <button type="button" class="theme-btn graydient-primary-btn">
                                 Save Configuration
                               </button>
                             </div>
-                          </div>
+                          </div> -->
                         </div>
                       </div>
                     </div>
@@ -805,15 +805,28 @@
                             </div>
                           </div>
 
-                          <div class="col text-right mt-3">
+                          <!-- <div class="col text-right mt-3">
                             <div class="add-edit-connection-bottom-btn">
                               <button type="button" class="theme-btn graydient-primary-btn">
                                 Save Configuration
                               </button>
                             </div>
-                          </div>
+                          </div> -->
                         </div>
                       </div>
+                    </div>
+                  </div>
+                  <div class="col text-right mt-4">
+                    <div class="add-edit-connection-bottom-btn mr-4 policy-btns-wrapper">
+                      <button type="button" class="cancel-btn">
+                        Cancel
+                      </button>
+                      <button type="button" class="theme-button-small graydient-secondary-btn">
+                        Secondary Button
+                      </button>
+                      <button type="button" class="theme-button-small graydient-primary-btn">
+                        Save Configuration
+                      </button>
                     </div>
                   </div>
                 </div>
