--- a/adapter-config.html
+++ b/adapter-config.html
@@ -316,7 +316,7 @@
                 </div>
 
                 <div class="add-edit-connection-heading-row">
-                  <div class="add-edit-heading"> <strong>Add or Edit connection</strong> </div>
+                  <div class="add-edit-heading"> Add or Edit connection </div>
                   <div class="add-edit-connection-btns">
                     <a href="#">Advanced Settings</a>
                     <div>
