--- a/index.html
+++ b/index.html
@@ -2307,7 +2307,7 @@
                 </div>
 
                 <div class="adapter-modal-field-row mt-3 adapter-three-col">
-                  <div class="mr-3">
+                  <div>
                     <label>Conntion Lable</label>
                     <input type="text" class="field-large" placeholder="" />
 
