--- a/adapter-config.html
+++ b/adapter-config.html
@@ -493,11 +493,11 @@
                                 </td>
                               </tr>
 
-                              <tr class="empty-row">
+                              <!-- <tr class="empty-row">
                                 <td colspan="10" class="border-bottom-left border-bottom-right">
                                   <div class="empty-row-shadow"></div>
                                 </td>
-                              </tr>
+                              </tr> -->
                             </tbody>
                           </table>
                         </div>
