add connector modal new page

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 
                     <tr>
                       <td>Add Connector</td>
-                      <td><a href="#" data-toggle="modal" data-target="#exampleModal">Html</a></td>
+                      <td><a href="add-connector-modal.html" target="_blank">Html</a></td>
 
                       <td><a href="https://invis.io/X3WVS9PHC8G#/413712410_Add-Connections" target="_blank">Design</a>
                       </td>
