--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                     </tr>
                     <tr>
                       <td>Connector Configuration</td>
-                      <td><a href="adapter-config.html" target="_blank">Html</a></td>
+                      <td><a href="connector-config.html" target="_blank">Html</a></td>
 
                       <td><a href="https://invis.io/X3WVS9PHC8G#/413712411_Connector-Config" target="_blank">Design</a>
                       </td>
