upload new build in Backend folder

--- a/backend/index.html
+++ b/backend/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8" />
 
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
   </script>
@@ -81,7 +81,14 @@
 
                     </tr>
                     <tr>
-                      <td>Dashboard</td>
+                      <td>Dashboard (New)</td>
+                      <td><a href="#" target="_blank">Html</a></td>
+
+                      <td><a href="https://invis.io/X3WVS9PHC8G#/428158309_Dashboard_New" target="_blank">Design</a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>Dashboard (Old)</td>
                       <td><a href="dashboard.html" target="_blank">Html</a></td>
 
                       <td><a href="https://invis.io/X3WVS9PHC8G#/413712185_Dashboard" target="_blank">Design</a></td>
@@ -240,7 +247,7 @@
                     </tr>
                     <tr>
                       <td>Connector Configuration</td>
-                      <td><a href="adapter-config.html" target="_blank">Html</a></td>
+                      <td><a href="connector-config.html" target="_blank">Html</a></td>
 
                       <td><a href="https://invis.io/X3WVS9PHC8G#/413712411_Connector-Config" target="_blank">Design</a>
                       </td>
@@ -248,7 +255,7 @@
 
                     <tr>
                       <td>Add Connector</td>
-                      <td><a href="#" data-toggle="modal" data-target="#exampleModal">Html</a></td>
+                      <td><a href="add-connector-modal.html" target="_blank">Html</a></td>
 
                       <td><a href="https://invis.io/X3WVS9PHC8G#/413712410_Add-Connections" target="_blank">Design</a>
                       </td>
@@ -2307,7 +2314,7 @@
                 </div>
 
                 <div class="adapter-modal-field-row mt-3 adapter-three-col">
-                  <div class="mr-3">
+                  <div>
                     <label>Conntion Lable</label>
                     <input type="text" class="field-large" placeholder="" />
 
