--- a/index.html
+++ b/index.html
@@ -81,7 +81,14 @@
 
                     </tr>
                     <tr>
-                      <td>Dashboard</td>
+                      <td>Dashboard (New)</td>
+                      <td><a href="#" target="_blank">Html</a></td>
+
+                      <td><a href="https://invis.io/X3WVS9PHC8G#/428158309_Dashboard_New" target="_blank">Design</a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>Dashboard (Old)</td>
                       <td><a href="dashboard.html" target="_blank">Html</a></td>
 
                       <td><a href="https://invis.io/X3WVS9PHC8G#/413712185_Dashboard" target="_blank">Design</a></td>
