--- a/backend/connector-config.html
+++ b/backend/connector-config.html
@@ -793,7 +793,7 @@
                       <div class="inner-tab-content pl-4 pr-4">
                         <div class="row m-0 connector-config-row">
                           <div class="col-lg-6">
-                            <div class="">
+                            <div class="col-box">
                               <div class="form-group">
                                 <label>Do not fetch device if not seen by source
                                   in last X hours</label>
@@ -826,7 +826,7 @@
                           </div>
 
                           <div class="col-lg-6">
-                            <div class="">
+                            <div class="col-box">
                               <div class="form-group">
                                 <label>Delete device if not fetched from source in
                                   last X hours</label>
@@ -1052,9 +1052,7 @@
                         </div>
                       </div>
                     </div>
-                  </div>
-                  <div class="col text-right mt-4">
-                    <div class="add-edit-connection-bottom-btn mr-3 policy-btns-wrapper">
+                    <div class="search-section-buttons policy-btns-wrapper mt-4 pl-4 pr-4">
                       <button type="button" class="cancel-btn">
                         Cancel
                       </button>
@@ -1066,6 +1064,8 @@
                       </button>
                     </div>
                   </div>
+
+
                 </div>
               </div>
               <!-- Section ends here -->
