--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     </tr>
                     <tr>
                       <td>Dashboard (New)</td>
-                      <td><a href="#" target="_blank">Html</a></td>
+                      <td>Html</td>
 
                       <td><a href="https://invis.io/X3WVS9PHC8G#/428158309_Dashboard_New" target="_blank">Design</a>
                       </td>
